deploy: 604369102e5cb92723b5db75df28ff1107e65268

--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_1_intro_testing">2.1. Lesson 1: Intro. Testing</a></li>
 <li><a href="#_lesson_2_apache_maven_intro">2.2. Lesson 2: Apache Maven. Intro</a></li>
 <li><a href="#_lesson_3_git_asciidoc">2.3. Lesson 3: Git. AsciiDoc</a></li>
+<li><a href="#_lesson_4_web_apache_tomcat">2.4. Lesson 4: Web. Apache Tomcat</a></li>
 </ul>
 </li>
 </ul>
@@ -529,6 +530,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li>
 <p><a href="https://youtu.be/z2N2ON87vXY" target="_blank" rel="noopener">How to install Git?</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/hEgZl79EPlQ" target="_blank" rel="noopener">How to install Apache Tomcat?</a></p>
 </li>
 <li>
 <p><a href="https://youtu.be/TUKT1CSzwZI" target="_blank" rel="noopener">Lesson 1: Intro. Testing</a></p>
@@ -809,12 +813,77 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </table>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_4_web_apache_tomcat">2.4. Lesson 4: Web. Apache Tomcat</h3>
+<div class="sect3">
+<h4 id="_practice_4">2.4.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Установить <strong>Apache Tomcat</strong>.</p>
+</li>
+<li>
+<p>Настроить <strong>AWS</strong>:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Создать группу и пользователя (<strong>Identity and Access Management</strong>/<strong>IAM</strong>)</p>
+</li>
+<li>
+<p>Создать <strong>EC2</strong> instance (фактически виртуальная машина).</p>
+</li>
+<li>
+<p>Настроить IO трафик для port <code>8080</code> на <strong>EC2</strong> instance.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Подготовить сервер:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Установить <strong>OpenJDK</strong>.</p>
+</li>
+<li>
+<p>Установить <strong>Apache Maven</strong>.</p>
+</li>
+<li>
+<p>Установить <strong>Apache Tomcat</strong>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_4">2.4.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/01-web-static-app/src/main/resources/web-static-app.adoc">Web CV</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-09 15:38:07 UTC
+Last updated 2021-12-13 05:04:03 UTC
 </div>
 </div>
 </body>
