--- a/lessons/index.html
+++ b/lessons/index.html
@@ -704,10 +704,77 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_4_web_apache_tomcat">Lesson 4: Web. Apache Tomcat</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_4">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Установить <strong>Apache Tomcat</strong>.</p>
+</li>
+<li>
+<p>Настроить <strong>AWS</strong>:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Создать группу и пользователя (<strong>Identity and Access Management</strong>/<strong>IAM</strong>)</p>
+</li>
+<li>
+<p>Создать <strong>EC2</strong> instance (фактически виртуальная машина).</p>
+</li>
+<li>
+<p>Настроить IO трафик для port <code>8080</code> на <strong>EC2</strong> instance.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Подготовить сервер:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Установить <strong>OpenJDK</strong>.</p>
+</li>
+<li>
+<p>Установить <strong>Apache Maven</strong>.</p>
+</li>
+<li>
+<p>Установить <strong>Apache Tomcat</strong>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_4">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/01-web-static-app/src/main/resources/web-static-app.adoc">Web CV</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-09 15:38:07 UTC
+Last updated 2021-12-13 05:04:03 UTC
 </div>
 </div>
 </body>
