--- a/links.html
+++ b/links.html
@@ -510,6 +510,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/z2N2ON87vXY" target="_blank" rel="noopener">How to install Git?</a></p>
 </li>
 <li>
+<p><a href="https://youtu.be/hEgZl79EPlQ" target="_blank" rel="noopener">How to install Apache Tomcat?</a></p>
+</li>
+<li>
 <p><a href="https://youtu.be/TUKT1CSzwZI" target="_blank" rel="noopener">Lesson 1: Intro. Testing</a></p>
 </li>
 <li>
@@ -537,7 +540,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-09 15:38:07 UTC
+Last updated 2021-12-13 05:04:03 UTC
 </div>
 </div>
 </body>
