deploy: d66eb85749d0ed7e408660deec160d6e64247a24

--- a/links.html
+++ b/links.html
@@ -498,6 +498,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect1">
 <h2 id="_videos">Videos</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_environment">Environment</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -513,6 +515,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/hEgZl79EPlQ" target="_blank" rel="noopener">How to install Apache Tomcat?</a></p>
 </li>
 <li>
+<p><a href="https://youtu.be/j4oDBGNWtys" target="_blank" rel="noopener">How to create an IAM user to AWS?</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/jIxiPgXZ2W8" target="_blank" rel="noopener">How to create an EC2 instance to AWS?</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/wJi5i_Ty5pQ" target="_blank" rel="noopener">How to set up Java environment an EC2 instance to AWS?</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_lessons">Lessons</h3>
+<div class="ulist">
+<ul>
+<li>
 <p><a href="https://youtu.be/TUKT1CSzwZI" target="_blank" rel="noopener">Lesson 1: Intro. Testing</a></p>
 </li>
 <li>
@@ -522,6 +540,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/oFEom97DbcA" target="_blank" rel="noopener">Lesson 3: Git. Asciidoc</a></p>
 </li>
 </ul>
+</div>
 </div>
 </div>
 </div>
@@ -540,7 +559,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-13 05:04:03 UTC
+Last updated 2021-12-14 18:01:09 UTC
 </div>
 </div>
 </body>
