--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_topics">1.4. Topics</a></li>
 </ul>
 </li>
-<li><a href="#_lessons">2. Lessons</a>
+<li><a href="#_lessons_2">2. Lessons</a>
 <ul class="sectlevel2">
 <li><a href="#_lesson_1_intro_testing">2.1. Lesson 1: Intro. Testing</a></li>
 <li><a href="#_lesson_2_apache_maven_intro">2.2. Lesson 2: Apache Maven. Intro</a></li>
@@ -520,6 +520,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sect2">
 <h3 id="_videos">1.3. Videos</h3>
+<div class="sect3">
+<h4 id="_environment">1.3.1. Environment</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -535,6 +537,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/hEgZl79EPlQ" target="_blank" rel="noopener">How to install Apache Tomcat?</a></p>
 </li>
 <li>
+<p><a href="https://youtu.be/j4oDBGNWtys" target="_blank" rel="noopener">How to create an IAM user to AWS?</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/jIxiPgXZ2W8" target="_blank" rel="noopener">How to create an EC2 instance to AWS?</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/wJi5i_Ty5pQ" target="_blank" rel="noopener">How to set up Java environment an EC2 instance to AWS?</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_lessons">1.3.2. Lessons</h4>
+<div class="ulist">
+<ul>
+<li>
 <p><a href="https://youtu.be/TUKT1CSzwZI" target="_blank" rel="noopener">Lesson 1: Intro. Testing</a></p>
 </li>
 <li>
@@ -544,6 +562,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/oFEom97DbcA" target="_blank" rel="noopener">Lesson 3: Git. Asciidoc</a></p>
 </li>
 </ul>
+</div>
 </div>
 </div>
 <div class="sect2">
@@ -559,7 +578,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_lessons">2. Lessons</h2>
+<h2 id="_lessons_2">2. Lessons</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Материал и ссылки на материал необходимый для занятия.</p>
@@ -883,7 +902,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-13 05:04:03 UTC
+Last updated 2021-12-14 18:01:09 UTC
 </div>
 </div>
 </body>
