deploy: 1390d83e906dac5e5a4ab3e10f05819be3cfdad5

--- a/index.html
+++ b/index.html
@@ -561,6 +561,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/oFEom97DbcA" target="_blank" rel="noopener">Lesson 3: Git. Asciidoc</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/nR6xDQHx5sw" target="_blank" rel="noopener">Lesson 4: Архитектура приложения. Введение в Web. Протокол HTTP. Apache Tomcat</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -902,7 +905,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-14 18:01:09 UTC
+Last updated 2021-12-15 10:12:16 UTC
 </div>
 </div>
 </body>
