deploy: 6d43c5fac942b820bd5a1cd51f660690f56b44cc

--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_2_apache_maven_intro">2.2. Lesson 2: Apache Maven. Intro</a></li>
 <li><a href="#_lesson_3_git_asciidoc">2.3. Lesson 3: Git. AsciiDoc</a></li>
 <li><a href="#_lesson_4_web_apache_tomcat">2.4. Lesson 4: Web. Apache Tomcat</a></li>
+<li><a href="#_lesson_4_apache_tomcat_servlet">2.5. Lesson 4: Apache Tomcat. Servlet</a></li>
 </ul>
 </li>
 </ul>
@@ -900,12 +901,55 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_4_apache_tomcat_servlet">2.5. Lesson 4: Apache Tomcat. Servlet</h3>
+<div class="sect3">
+<h4 id="_practice_5">2.5.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Применить лицензии JetBrains.</p>
+</li>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/03-web-servlet-app/src/main/resources/servlet.adoc">Servlet</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_5">2.5.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/03-web-servlet-app/src/main/resources/user-management-web-app.adoc">Web CV</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-15 10:12:16 UTC
+Last updated 2021-12-15 17:56:03 UTC
 </div>
 </div>
 </body>
