deploy: 518b3716b012043330ee27f9a7d5899cbafadbcd

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -772,21 +772,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_lesson_4_apache_tomcat_servlet">Lesson 4: Apache Tomcat. Servlet</h2>
+<h2 id="_lesson_5_apache_tomcat_servlet">Lesson 5: Apache Tomcat. Servlet</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_practice_5">Practice</h3>
 <div class="ulist">
 <ul>
 <li>
-<p>Применить лицензии JetBrains.</p>
-</li>
-<li>
 <p>Выполнить задание:</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/03-web-servlet-app/src/main/resources/servlet.adoc">Servlet</a>.</p>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/03-web-servlet-app/src/main/resources/servlet.adoc">Tasks: Servlet</a>.</p>
 </li>
 </ul>
 </div>
@@ -806,7 +803,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/03-web-servlet-app/src/main/resources/user-management-web-app.adoc">Web CV</a>.</p>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/03-web-servlet-app/src/main/resources/user-management-web-app.adoc">User management web application</a>.</p>
 </li>
 </ul>
 </div>
@@ -819,7 +816,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-15 17:56:03 UTC
+Last updated 2021-12-15 19:05:03 UTC
 </div>
 </div>
 </body>
