--- a/index.html
+++ b/index.html
@@ -565,6 +565,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/nR6xDQHx5sw" target="_blank" rel="noopener">Lesson 4: Архитектура приложения. Введение в Web. Протокол HTTP. Apache Tomcat</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/QAl8S9qtTwE" target="_blank" rel="noopener">Lesson 5: Apache Tomcat. Servlet</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -946,7 +949,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-15 19:05:03 UTC
+Last updated 2021-12-16 10:19:28 UTC
 </div>
 </div>
 </body>
