deploy: 188c4788a1672b8b6bf5c524e93e8ca2b0e91cb8

--- a/index.html
+++ b/index.html
@@ -579,6 +579,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://habrahabr.ru/blogs/Git/106912/" target="_blank" rel="noopener">Удачная модель ветвления для Git.</a></p>
 </li>
+<li>
+<p><a href="https://stackoverflow.com/questions/138948/how-to-get-utf-8-working-in-java-webapps/138950">How to get UTF-8 working in Java webapps?</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -949,7 +952,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-16 10:19:28 UTC
+Last updated 2021-12-20 02:38:15 UTC
 </div>
 </div>
 </body>
