deploy: 829973c279ae20414c83a2e538ced3b92bff2032

--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_3_git_asciidoc">2.3. Lesson 3: Git. AsciiDoc</a></li>
 <li><a href="#_lesson_4_web_apache_tomcat">2.4. Lesson 4: Web. Apache Tomcat</a></li>
 <li><a href="#_lesson_5_apache_tomcat_servlet">2.5. Lesson 5: Apache Tomcat. Servlet</a></li>
+<li><a href="#_lesson_6_servlets_jsp">2.6. Lesson 6: Servlets. JSP</a></li>
 </ul>
 </li>
 </ul>
@@ -947,12 +948,45 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_6_servlets_jsp">2.6. Lesson 6: Servlets. JSP</h3>
+<div class="sect3">
+<h4 id="_practice_6">2.6.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/04-web-jsp-app/src/main/resources/jsp.adoc">Tasks: JSP</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_6">2.6.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 06-07. Смотри: Lesson 07.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-20 02:38:15 UTC
+Last updated 2021-12-20 03:16:08 UTC
 </div>
 </div>
 </body>
