--- a/lessons/index.html
+++ b/lessons/index.html
@@ -813,10 +813,45 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_6_servlets_jsp">Lesson 6: Servlets. JSP</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_6">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/04-web-jsp-app/src/main/resources/jsp.adoc">Tasks: JSP</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_6">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 06-07. Смотри: Lesson 07.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-20 02:38:15 UTC
+Last updated 2021-12-20 03:16:08 UTC
 </div>
 </div>
 </body>
