--- a/lessons/lesson-03.html
+++ b/lessons/lesson-03.html
@@ -499,7 +499,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">Links for source topic</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Бахарь Николай Анатольевич</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Антонович Валентина Георгиевна</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/introduction/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/introduction/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/architecture/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/architecture/</a></p></td>
 </tr>
 <tr>
@@ -531,7 +531,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/caching/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/caching/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">???</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Карпович Дмитрий Владимирович</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/</a></p></td>
 </tr>
 <tr>
@@ -561,7 +561,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-20 03:16:08 UTC
+Last updated 2021-12-20 03:18:28 UTC
 </div>
 </div>
 </body>
