deploy: d4d7648f36d3afd26f7cf353411b764a817aff6f

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -848,10 +848,52 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_7_filter_jstl_el">Lesson 7:  Filter. JSTL. EL.</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_7">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/07-web-filter-app/src/main/resources/filter.adoc">Tasks: Filter</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_7">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 06-07:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/06-web-jstl-app/src/main/resources/jstl.adoc" class="bare">https://github.com/rakovets/course-java-jakarta-ee/blob/master/06-web-jstl-app/src/main/resources/jstl.adoc</a></p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-20 03:19:58 UTC
+Last updated 2021-12-22 14:41:47 UTC
 </div>
 </div>
 </body>
