--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_4_web_apache_tomcat">2.4. Lesson 4: Web. Apache Tomcat</a></li>
 <li><a href="#_lesson_5_apache_tomcat_servlet">2.5. Lesson 5: Apache Tomcat. Servlet</a></li>
 <li><a href="#_lesson_6_servlets_jsp">2.6. Lesson 6: Servlets. JSP</a></li>
+<li><a href="#_lesson_7_filter_jstl_el">2.7. Lesson 7:  Filter. JSTL. EL.</a></li>
 </ul>
 </li>
 </ul>
@@ -981,12 +982,52 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_7_filter_jstl_el">2.7. Lesson 7:  Filter. JSTL. EL.</h3>
+<div class="sect3">
+<h4 id="_practice_7">2.7.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/07-web-filter-app/src/main/resources/filter.adoc">Tasks: Filter</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_7">2.7.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 06-07:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-jakarta-ee/blob/master/06-web-jstl-app/src/main/resources/jstl.adoc" class="bare">https://github.com/rakovets/course-java-jakarta-ee/blob/master/06-web-jstl-app/src/main/resources/jstl.adoc</a></p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-20 03:19:58 UTC
+Last updated 2021-12-22 14:41:47 UTC
 </div>
 </div>
 </body>
