deploy: 7ca642c436a4604ce59125c465e6ada452f03b3c

--- a/index.html
+++ b/index.html
@@ -570,6 +570,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/QAl8S9qtTwE" target="_blank" rel="noopener">Lesson 5: Apache Tomcat. Servlet</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/i3iF8wkUFQY" target="_blank" rel="noopener">Lesson 6: Servlets. JSP</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/bPMIpwtjKZY" target="_blank" rel="noopener">Lesson 7: Filter. JSTL. EL</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -1027,7 +1033,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-22 14:41:47 UTC
+Last updated 2021-12-23 10:32:05 UTC
 </div>
 </div>
 </body>
