deploy: 952d7763425aa37161a5d8c9b937d0c1ed975946

--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_5_apache_tomcat_servlet">2.5. Lesson 5: Apache Tomcat. Servlet</a></li>
 <li><a href="#_lesson_6_servlets_jsp">2.6. Lesson 6: Servlets. JSP</a></li>
 <li><a href="#_lesson_7_filter_jstl_el">2.7. Lesson 7:  Filter. JSTL. EL.</a></li>
+<li><a href="#_lesson_8_введение_в_базы_данных_и_sql">2.8. Lesson 8: Введение в Базы данных и SQL</a></li>
 </ul>
 </li>
 </ul>
@@ -1028,12 +1029,51 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_8_введение_в_базы_данных_и_sql">2.8. Lesson 8: Введение в Базы данных и SQL</h3>
+<div class="sect3">
+<h4 id="_practice_8">2.8.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/basics.adoc">Basics</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/data-manipulation.adoc">Data manipulation</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/aggregation-functions-and-grouping.adoc">Aggregation functions and grouping</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_8">2.8.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 08-09. Смотри: Lesson 08.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-23 10:32:05 UTC
+Last updated 2021-12-27 14:59:20 UTC
 </div>
 </div>
 </body>
