--- a/lessons/index.html
+++ b/lessons/index.html
@@ -890,10 +890,51 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_8_введение_в_базы_данных_и_sql">Lesson 8: Введение в Базы данных и SQL</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_8">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/basics.adoc">Basics</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/data-manipulation.adoc">Data manipulation</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/aggregation-functions-and-grouping.adoc">Aggregation functions and grouping</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_8">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 08-09. Смотри: Lesson 08.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-23 10:32:05 UTC
+Last updated 2021-12-27 14:59:20 UTC
 </div>
 </div>
 </body>
