deploy: e1757686aa6aa311bca2a5acfa0e0d9270acfcde

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -898,6 +898,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
+<p>Установить <strong>PostgreSQL</strong> <code>latest</code></p>
+</li>
+<li>
 <p>Выполнить задание:</p>
 <div class="ulist">
 <ul>
@@ -934,7 +937,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-27 14:59:20 UTC
+Last updated 2021-12-27 15:14:53 UTC
 </div>
 </div>
 </body>
