deploy: 55c9cab027307b3b42e6e6b7aab82f8c524a7e23

--- a/links.html
+++ b/links.html
@@ -551,6 +551,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/bPMIpwtjKZY" target="_blank" rel="noopener">Lesson 7: Filter. JSTL. EL</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/SpnATl0KeRU" target="_blank" rel="noopener">Lesson 8: Введение в Базы данных и SQL</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -574,7 +577,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-27 15:14:53 UTC
+Last updated 2021-12-28 10:04:09 UTC
 </div>
 </div>
 </body>
