deploy: 46731bd9fb943787e2f08a747c60039cc66b2673

--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_6_servlets_jsp">2.6. Lesson 6: Servlets. JSP</a></li>
 <li><a href="#_lesson_7_filter_jstl_el">2.7. Lesson 7:  Filter. JSTL. EL.</a></li>
 <li><a href="#_lesson_8_введение_в_базы_данных_и_sql">2.8. Lesson 8: Введение в Базы данных и SQL</a></li>
+<li><a href="#_lesson_9_нормализация_группировки_joins">2.9. Lesson 9: Нормализация. Группировки. Joins</a></li>
 </ul>
 </li>
 </ul>
@@ -1074,12 +1075,64 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_9_нормализация_группировки_joins">2.9. Lesson 9: Нормализация. Группировки. Joins</h3>
+<div class="sect3">
+<h4 id="_practice_9">2.9.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Установить <strong>PostgreSQL</strong> <code>latest</code></p>
+</li>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/multi-tabular-databases.adoc">Multi-tabular databases</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/designing-relational-databases.adoc">Designing relational databases</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_9">2.9.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 08-09. Результатом являются SQL-scripts, с помощью которых можно повторить те же действия, на пустой БД.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>разработать структуры БД для собственного проекта</p>
+</li>
+<li>
+<p>добавить в каждую таблицу с сущностью 10+ записей, в каждую связующую таблицу 20+ записей</p>
+</li>
+<li>
+<p>выполнить основные CRUD операции, которые будут выполняться в рамках данного проекта (не менее 30 различных запросов)</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-29 14:36:49 UTC
+Last updated 2021-12-29 16:48:23 UTC
 </div>
 </div>
 </body>
