--- a/lessons/index.html
+++ b/lessons/index.html
@@ -934,10 +934,64 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_9_нормализация_группировки_joins">Lesson 9: Нормализация. Группировки. Joins</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_9">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Установить <strong>PostgreSQL</strong> <code>latest</code></p>
+</li>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/multi-tabular-databases.adoc">Multi-tabular databases</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/rakovets/course-sql/blob/master/tasks/designing-relational-databases.adoc">Designing relational databases</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_9">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 08-09. Результатом являются SQL-scripts, с помощью которых можно повторить те же действия, на пустой БД.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>разработать структуры БД для собственного проекта</p>
+</li>
+<li>
+<p>добавить в каждую таблицу с сущностью 10+ записей, в каждую связующую таблицу 20+ записей</p>
+</li>
+<li>
+<p>выполнить основные CRUD операции, которые будут выполняться в рамках данного проекта (не менее 30 различных запросов)</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-29 14:36:49 UTC
+Last updated 2021-12-29 16:48:23 UTC
 </div>
 </div>
 </body>
