deploy: f9c52bec69faf0fa0ab3891a854099d9b2428018

--- a/index.html
+++ b/index.html
@@ -581,6 +581,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/SpnATl0KeRU" target="_blank" rel="noopener">Lesson 8: Введение в Базы данных и SQL</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/dv-Mt2Cpun0" target="_blank" rel="noopener">Lesson 9: Нормализация. Группировки. Joins</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -1132,7 +1135,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-29 16:48:23 UTC
+Last updated 2022-01-03 09:37:16 UTC
 </div>
 </div>
 </body>
