deploy: 454aad1e15294af18afd5bad9bd7da1b1fa55a72

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -988,10 +988,48 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_10_java_database_connectivity_jdbc">Lesson 10: Java Database Connectivity (JDBC)</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_10">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Сделать миграцию данных в БД с помощью проекта: <a href="https://github.com/rakovets/course-java-data-persistence/tree/master/.init">Database init</a></p>
+</li>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-data-persistence/blob/master/jdbc/src/main/resources/jdbc.adoc">JDBC</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_10">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 10-11.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-03 09:37:16 UTC
+Last updated 2022-01-03 14:45:19 UTC
 </div>
 </div>
 </body>
