--- a/index.html
+++ b/index.html
@@ -585,6 +585,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/dv-Mt2Cpun0" target="_blank" rel="noopener">Lesson 9: Нормализация. Группировки. Joins</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/ZFZMBW3wyj0" target="_blank" rel="noopener">Lesson 10: Java Database Connectivity (JDBC)</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -1172,7 +1175,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-03 14:45:19 UTC
+Last updated 2022-01-05 04:51:59 UTC
 </div>
 </div>
 </body>
