deploy: e48f519ad16121754826f1aac4d7928f369ac9ec

--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_8_введение_в_базы_данных_и_sql">2.8. Lesson 8: Введение в Базы данных и SQL</a></li>
 <li><a href="#_lesson_9_нормализация_группировки_joins">2.9. Lesson 9: Нормализация. Группировки. Joins</a></li>
 <li><a href="#_lesson_10_java_database_connectivity_jdbc">2.10. Lesson 10: Java Database Connectivity (JDBC)</a></li>
+<li><a href="#_lesson_11_data_access_object_dao">2.11. Lesson 11: Data Access Object (DAO)</a></li>
 </ul>
 </li>
 </ul>
@@ -1170,12 +1171,45 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_11_data_access_object_dao">2.11. Lesson 11: Data Access Object (DAO)</h3>
+<div class="sect3">
+<h4 id="_practice_11">2.11.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Сделать миграцию данных в БД с помощью проекта: <a href="https://github.com/rakovets/course-java-data-persistence/tree/master/.init">Database init</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_11">2.11.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 10-11. Реализовать задание с помощью паттерна DAO:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-data-persistence/blob/master/jdbc/src/main/resources/jdbc.adoc">JDBC</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-05 15:29:25 UTC
+Last updated 2022-01-05 16:21:56 UTC
 </div>
 </div>
 </body>
