--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1026,10 +1026,45 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_11_data_access_object_dao">Lesson 11: Data Access Object (DAO)</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_11">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Сделать миграцию данных в БД с помощью проекта: <a href="https://github.com/rakovets/course-java-data-persistence/tree/master/.init">Database init</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_11">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 10-11. Реализовать задание с помощью паттерна DAO:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-data-persistence/blob/master/jdbc/src/main/resources/jdbc.adoc">JDBC</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-05 15:29:25 UTC
+Last updated 2022-01-05 16:21:56 UTC
 </div>
 </div>
 </body>
