--- a/index.html
+++ b/index.html
@@ -589,6 +589,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/ZFZMBW3wyj0" target="_blank" rel="noopener">Lesson 10: Java Database Connectivity (JDBC)</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/RauHxlrEo0Y" target="_blank" rel="noopener">Lesson 11: Data Access Object (DAO)</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -1209,7 +1212,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-05 16:21:56 UTC
+Last updated 2022-01-06 13:31:28 UTC
 </div>
 </div>
 </body>
