deploy: da6f82be6b497e6da0b52050f96fe3b6746aa5b7

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -635,69 +635,85 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Table 1. Маппинг тем для задания по AsciiDoc</caption>
 <colgroup>
-<col style="width: 50%;">
-<col style="width: 50%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3334%;">
 </colgroup>
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Разработчик</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Links for source topic</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Done</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Антонович Валентина Георгиевна</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/introduction/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/introduction/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/architecture/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/architecture/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Василевич Виталий Валерьевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/configure/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/configure/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/sessions/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/sessions/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">No</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Жигалко Евгений Владимирович</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://javarush.ru/groups/posts/2112-kratkiy-ehkskurs-v-vnedrenie-zavisimostey-ili-chto-ejshje-za-cdi" class="bare">https://javarush.ru/groups/posts/2112-kratkiy-ehkskurs-v-vnedrenie-zavisimostey-ili-chto-ejshje-za-cdi</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Кармызов Сергей Николаевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/persistent-classes/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/persistent-classes/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-files/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-files/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Карпович Владислав Андреевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/simple-application/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/simple-application/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Need to fix</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Климахович Владислав Игоревич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/annotations/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/annotations/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/hibernate-query-language/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/hibernate-query-language/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Need to fix</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Коваленко Алексей Петрович</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/criteria-queries/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/criteria-queries/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/native-sql/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/native-sql/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Need to fix</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Колбасов Илья Николаевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/caching/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/caching/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Need to fix</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Карпович Дмитрий Владимирович</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">No</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Нестерук Даниил Андреевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-many-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-many-mapping-example/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-many-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-many-mapping-example/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">No</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Парамонов Алексей Владимирович</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-one-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-one-mapping-example/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-one-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-one-mapping-example/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Need to fix</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Скопинов Дмитрий Николаевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/list-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/list-mapping-example/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/collection-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/collection-mapping-example/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Толкач Александр Михайлович</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/set-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/set-mapping-example/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Щербунов Даниил Даниилович</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://javarush.ru/groups/posts/2637-vvedenie-v-java-ee" class="bare">https://javarush.ru/groups/posts/2637-vvedenie-v-java-ee</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/component-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/component-mapping-example/</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
 </tr>
 </tbody>
 </table>
@@ -1064,7 +1080,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-06 13:31:28 UTC
+Last updated 2022-01-07 05:42:31 UTC
 </div>
 </div>
 </body>
